[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tcl_kernel"
author = "Ryan Pepper"
author-email = "rp20g15@soton.ac.uk"
home-page = "https://github.com/ryanpepper/tcl_kernel"
requires = ["pexpect (>=3.3)"]
description-file = "README.rst"
classifiers = ["Framework :: IPython", "License :: OSI Approved :: BSD License", "Programming Language :: Python :: 3", "Topic :: System :: Shells"]

